--- a/tutorial/fields_tutorial.ipynb
+++ b/tutorial/fields_tutorial.ipynb
@@ -134,8 +134,7 @@
     "components. This can be done at a single position, or with an array of \n",
     "positions. \n",
     "\n",
-    "**The simulation is intended to analyse the halos of the galaxies and not the \n",
-    "inner Milky Way. To demonstrate this, an example of an orbit with Sun-like \n",
+    "**The resolution of the disc is lowered due to the mazimum git file size. Analyses of the inner Milky Way might not be reliable in this package. To demonstrate this, an example of an orbit with Sun-like \n",
     "initial conditions is shown in the [orbits tutorial](orbits_tutorial.ipynb).**"
    ]
   },
@@ -559,7 +558,7 @@
     "The flag for the monopole is $0$, the flag for the dipole is one, the flag for \n",
     "the quadrupole is $2$. The flag for combining dipole and quadrupole is $3$. \n",
     "For all higher flag best use the function. The flag for the live potential is \n",
-    "$63$ or any higher number."
+    "$63$ or if the harmonic flag is not specified."
    ]
   },
   {
