--- a/tutorial/orbits_tutorial.ipynb
+++ b/tutorial/orbits_tutorial.ipynb
@@ -246,7 +246,7 @@
     "The flag for the monopole is $0$, the flag for the dipole is one, the flag for \n",
     "the quadrupole is $2$. The flag for combining dipole and quadrupole is $3$. \n",
     "For all higher flag best use the function. The flag for the live potential is \n",
-    "$63$ or any higher number."
+    "$63$ or if the harmonic flag is not specified."
    ]
   },
   {
