set discframe=false as default (affecting the rewind fct) and updated orbit tutorial

--- a/tutorial/orbits_tutorial.ipynb
+++ b/tutorial/orbits_tutorial.ipynb
@@ -166,6 +166,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c1890755-14f3-4fcd-9596-732c0ec84d7a",
    "metadata": {
@@ -180,9 +181,7 @@
     "the fully live versions are selected). We can select up to the $l=6$ order in \n",
     "any combination we want (with the monopole always being selected). \n",
     "The `mwlmc_util.get_harmonic_flag` function returns the flag for our selection. \n",
-    "If we e.g. want to choose only the even moments $l=(2,4,6)$ we can call \n",
-    "flag = mwlmc_util.get_harmonic_flag([2,4,6])\n",
-    "print(flag)`flag = mwlmc_util.get_harmonic_flag([2,4,6])`."
+    "If we e.g. want to choose only the even moments $l=(2,4,6)$ we can call the command in the following cell."
    ]
   },
   {
@@ -292,8 +291,6 @@
     "vsun = np.array([0.,200.,0.])\n",
     "\n",
     "orbit = Model.rewind(xsun, vsun,\n",
-    "                     # mwhharmonicflag=64,\n",
-    "                     discframe=False,\n",
     "                     rewindtime=2.0, dt=0.001)\n",
     "\n",
     "ox, oy, oz = orbit[0], orbit[1], orbit[2]\n",
@@ -378,10 +375,8 @@
     "print(np.shape(pos))\n",
     "X = Model.rewind(pos, vel,\n",
     "                 mwhharmonicflag=63,\n",
-    "                 discframe=False,\n",
     "                 rewindtime=2.5, dt=0.001)\n",
     "\n",
-    "# print(np.shape(X))\n",
     "X = np.array(X)"
    ]
   },
@@ -502,7 +497,6 @@
     "for i, flag in enumerate(flags):\n",
     "    orbit = Model.rewind(xsun, vsun,\n",
     "                         mwhharmonicflag=flag, \n",
-    "                         discframe=False,\n",
     "                         rewindtime=4, dt=0.001)\n",
     "\n",
     "    ox, oy, oz = orbit[0], orbit[1], orbit[2]\n",
@@ -626,12 +620,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cece9f3d-fcd0-422d-afae-254d21eabf5c",
    "metadata": {},
    "source": [
-    "Here, the orbit is stable and does not deviate from the plane. Again. let's look\n",
-    "at an array of orbits:"
+    "This seems to be a more regular orbit but with ever increasing $|z|$. We also see that the `mworbit` function runs forward in time. \n",
+    "\n",
+    "Again, let's look at an array of orbits:"
    ]
   },
   {
@@ -807,7 +803,6 @@
     "\n",
     "for i, flag in enumerate(flags):\n",
     "    orbit = Model.rewind(pos, vel,\n",
-    "                         discframe=False,\n",
     "                         mwhharmonicflag=flag, \n",
     "                         rewindtime=2, dt=0.001)\n",
     "\n",
@@ -885,7 +880,6 @@
     "# rewind the orbits\n",
     "X = Model.rewind(pos, vel,\n",
     "                 mwhharmonicflag=63,\n",
-    "                 discframe=False,\n",
     "                 rewindtime=2., dt=0.001)\n",
     "X = np.array(X)\n",
     "\n",
@@ -1067,6 +1061,7 @@
     "\n",
     "### fully live \n",
     "X = Model.rewind(pos, vel,\n",
+    "                 discframe=True, # somehow a turned off discframe makes the orbits wobbly, possibly due to the substraction of r_dt\n",
     "                 mwhharmonicflag=63,\n",
     "                 rewindtime=2.5, \n",
     "                 dt=0.001)\n",
@@ -1083,6 +1078,7 @@
     "### monopole orbits\n",
     "X = Model.rewind(pos, vel,\n",
     "                 mwhharmonicflag=0, \n",
+    "                 discframe=True, # somehow a turned off discframe makes the orbits wobbly, possibly due to the substraction of r_dt\n",
     "                 rewindtime=2.5, \n",
     "                 dt=0.001\n",
     "                )\n",
